fix: relocation of shifts

--- a/ManagerFrontApp/src/app/doctors-management/doctors-management.component.css
+++ b/ManagerFrontApp/src/app/doctors-management/doctors-management.component.css
@@ -179,3 +179,109 @@
     transition: border-color 0.2s;
     border-radius: 3%;
   }
+
+  /* Bojan */
+  .btn {
+    color: white;
+    background-color: cadetblue;
+    border-radius: 8px;
+    min-width: 100px;
+    height: 28px;
+    font-size: 18px;
+    transition: 0.7s;
+    margin: 0 5px;
+    width: max-content;
+    padding: 0 10px;
+  }
+
+  .list-table {
+    display: block;
+    margin-left: 2%;
+    margin-right: 2%;
+    background-color: rgba(224, 223, 223, 0.911);
+  }
+  .list-table thead {
+    display: flex;
+    width: 100%;
+  }
+  .list-table tbody {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .list-table thead > tr {
+    display: flex;
+    flex: 1;
+  }
+  .list-table tbody > tr {
+    display: flex;
+    flex: 1;
+  }
+  .list-table tbody > tr > td {
+    display: inline-block;
+    padding: 8px;
+    text-align: left;
+    font-size: 14px;
+    color: #000;
+    flex: 1;
+  }
+  .list-table th {
+    display: inline-block;
+    padding: 8px;
+    text-align: left;
+    font-size: 14px;
+    text-align: center;
+    color: white;
+    background: cadetblue;
+    flex: 1;
+  }
+
+  .doctor-list-table {
+    display: block;
+    margin-left: 2%;
+    margin-right: 2%;
+    background-color: rgba(224, 223, 223, 0.911);
+    max-height: 300px;
+    overflow-y: scroll;
+  }
+  .doctor-list-table thead {
+    display: flex;
+    width: 100%;
+  }
+  .doctor-list-table tbody {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .doctor-list-table thead > tr {
+    display: flex;
+    flex: 1;
+  }
+  .doctor-list-table tbody > tr {
+    display: flex;
+    flex: 1;
+  }
+  .doctor-list-table tbody > tr > td {
+    display: inline-block;
+    padding: 8px;
+    text-align: left;
+    font-size: 14px;
+    color: #000;
+    flex: 1;
+  }
+  .doctor-list-table th {
+    display: inline-block;
+    padding: 8px;
+    text-align: left;
+    font-size: 14px;
+    text-align: center;
+    color: white;
+    background: cadetblue;
+    flex: 1;
+  }
+
+  .shiftsBox{
+    margin-top:70px;
+    font-size: 16px;
+    align-items: center;
+  }
